--- a/view.phtml
+++ b/view.phtml
@@ -8,15 +8,19 @@
         <h1>Enter and submit text</h1>
         <form action="/" method="post">
             <div>
-                <input type="hidden" name="csrf" value="<?=$csrf?>">
+                <input type="hidden" name="csrf" value="<?= /** @var string $csrf */$csrf?>">
+                <div>
+                    <label for="textarea">Text:</label>
+                </div>
                 <textarea
+                        id="textarea"
                         name="textarea"
-                        placeholder="<?=htmlspecialchars($placeholder)?>"
+                        placeholder="<?= /** @var string $placeholder */htmlspecialchars($placeholder)?>"
                         rows="10"
                         cols="50"
-                ><?=htmlspecialchars($value)?></textarea>
+                ><?= /** @var string $value */htmlspecialchars($value)?></textarea>
             </div>
-            <?php if ($error !== '') : ?>
+            <?php /** @var string $error */if ($error !== '') : ?>
             <div>
                 <?=htmlspecialchars($error)?>
             </div>
